--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,5 +1,4 @@
 .msg {
-    color: green;
     background: lightgrey;
     font-size: 20px;
     border-style: solid;
@@ -7,3 +6,13 @@
     padding: 10px;
     margin-bottom: 10px;
   }
+
+.green {
+    color: green;
+  }
+
+.red {
+    color: red;
+  }
+
+  
